DuPont DevSB/src/objects/ccrz__E_MenuItem__c.object
<CustomObject>
    <description>The E_MenuItem__c object contains data pertaining to child menu links. NOTE: Unless Menu Cache is re-generated, any changes made to the data in this object will not reflect on the UI.</description>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Category object, if Link Type is set to Category.</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>CC Menu Items</relationshipLabel>
        <relationshipName>CC_Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayName__c</fullName>
        <description>Display Name of the child menu.</description>
        <label>DisplayName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag determining whether or not this child menu record is active.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last date that this child menu will be available.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__LinkType__c</fullName>
        <description>Type of this menu link. Possible values are Category, Product or URL. Option selected for this field, determines which field- Category, Product or URL should be referenced to construct the URL for this child menu link.</description>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__MenuItemId__c</fullName>
        <description>Child menu external ID field used for data loading.</description>
        <externalId>true</externalId>
        <label>Menu Item Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Menu__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to the CC Menu record. The Referenced CC Menu record will be the parent of this child menu item record.</description>
        <label>Menu</label>
        <referenceTo>ccrz__E_Menu__c</referenceTo>
        <relationshipLabel>CC Menu Items</relationshipLabel>
        <relationshipName>Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__NewWindowProperty__c</fullName>
        <description>Deprecated. Was used for passing extra parameters to the URL, if Link Type was URL.</description>
        <label>New Window Property</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__NewWindow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine whether to open this menu item link in a new window or not.</description>
        <label>New Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentMenuItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to parent menu item record. Through this field, you can build a third level of Menu hierarchy. If this field is set, then the Menu__c field should be blank.</description>
        <label>Parent Menu Item</label>
        <referenceTo>ccrz__E_MenuItem__c</referenceTo>
        <relationshipLabel>Child Menu Items</relationshipLabel>
        <relationshipName>Child_Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Product object, if Link Type is set to Product.</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Menu Items</relationshipLabel>
        <relationshipName>CC_Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Sequence in which the menu item links should be displayed. For a given menu record, menu item record with the smallest sequence is displayed first, starting from the left in desktop view, and starting from the top in tablet/mobile view.</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first date that this menu item will be available.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__URL__c</fullName>
        <description>This field is referenced to construct the URL of this menu item Link, if Link Type is set to URL. It can be a relative or an absolute URL.</description>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CC Menu Item</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>CC Menu Item Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Menu Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>